adding Handler Advance info

--- a/_posts/acs-aem-commons/features/2013-08-10-audio.md
+++ b/_posts/acs-aem-commons/features/2013-08-10-audio.md
@@ -22,7 +22,7 @@ Similar to the AEM HTML5 video component, audio files added to the DAM are trans
 
 * Edit the DAM Update Asset Workflow model
 * Add a Process Step using the "Encode Audio" process.
-* For the Process Arguments, provide "profile:ogghq,profile:mp3hq"
+* For the Process Arguments, provide "profile:ogghq,profile:mp3hq" and check the Handler Advance checkbox.
 * Save the Workflow model
 
 <img src="{{ site.data.acs-aem-commons.baseurl }}/images/audio/workflow-dialog.png" width="400"/>
