Add documentation for new Contextual Path Browser granite UI widget

--- a/_posts/acs-aem-commons/features/2013-08-01-widgets.md
+++ b/_posts/acs-aem-commons/features/2013-08-01-widgets.md
@@ -9,6 +9,43 @@ tags: acs-aem-commons-features
 categories: acs-aem-commons features
 ---
 
+## Contextual Path Browser (Since 2.10.0)
+The `contextualpathbrowser` granite UI widget functions just like a standard `pathbrowser` widget other than it detects
+the root page of the current site on a multi-site platform and limits the author to selecting content within that site.
+
+Take the following content structure:
+
+    /content
+        /siteA
+            /pageA1
+            /pageA2
+        /siteB
+            /pageB1
+            /pageB2
+
+For a component that requires a standard `pathbrowser` field to be used on both of these sites, the `pathbrowser` would
+need to be configured with a root of `/` or `/content`, leaving the author to correctly navigate into siteA when working
+on siteA, or into siteB when working on siteB. As the number of sites increase, so does the chance for user error. It
+also makes for a less clean authoring experience.
+
+The `contextualpathbrowser` field instead leverages the `Page Info Provider` configured via OSGi to
+determine the base page of the current site and dynamically limit the content to that particular site. As such, an
+author opening up a dialog with `contextualpathbrowser` from any page on siteA will see and be able to select pages
+only from siteA, and an author on siteB will see and be able to select pages only from siteB.
+
+To use `contextualpathbrowser`, you must first configure the `Page Info Provider` in OSGi with the appropriate path(s)
+or regex(es) to determine the root page(s) of your site(s).  Then, to leverage `contextualpathbrowser` in a dialog,
+simply replace
+
+    sling:resourceType="granite/ui/components/foundation/form/pathbrowser"
+
+with
+
+    sling:resourceType="acs-commons/touchui-widgets/contextualpathbrowser"
+    
+Other than `rootPath`, which is determined dynamically by `contextualpathbrowser`, all configurations are the same as
+with the standard `pathbrowser` widget.
+
 ## Vanity Path Uniqueness Check (Since 1.5.0)
 
 The `uniqueVanityPath` vtype ensures that a `sling:vanityPath` value is unique across a particular installation of AEM. To enable this, create a copy of `/libs/foundation/components/page/tab_basic` specific to your page component(s) and then reference this copy from your page component(s) dialog. Edit the node at `items/vanity/items/vanityPath` so that only these properties are set:
