--- a/_acs-aem-commons/features/fast-action-manager/old/aem_60_61.md
+++ b/_acs-aem-commons/features/fast-action-manager/old/aem_60_61.md
@@ -11,7 +11,7 @@ initial-release: 2.4.0/3.0.0
 
 ## Version notice
 
-In order to better support Java 8 language features, FAM will only be maintained from ACS Commons versions 2.12.0 and 3.9.0 to support AEM 6.2 and 6.3 respectively.  Older AEM instances running on earlier versions may use the older version of FAM but will not inherit any of the more recent bug fixes or improvements.
+In order to better support Java 8 language features, FAM will only be maintained from ACS Commons version 3.9.0 onward to support AEM 6.2 or later.  Older AEM instances running on earlier versions may use the older version of FAM but will not inherit any of the more recent bug fixes or improvements.
 
 ## Purpose
 
