ACS AEM Commons - Link to changelog

--- a/acs-aem-commons/pages/releases/4-0-0.md
+++ b/acs-aem-commons/pages/releases/4-0-0.md
@@ -12,6 +12,10 @@ title: ACS AEM Commons 4.0.0
 Please read this page to understand these breaking changes!
 </div>
 
+## Changelog
+
+For a list of ALL the changes in 4.0.0 please review the [full changelog](https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases).
+
 ## Breaking functional changes
 
  **All Client Libraries are now disabled by default!**
