Wrapper Client Library instructions

--- a/acs-aem-commons/pages/releases/4-0-0.md
+++ b/acs-aem-commons/pages/releases/4-0-0.md
@@ -78,6 +78,7 @@ We recommend defining a wrapper Client Library per ACS Commons feature under you
 
 ```
 
+**Remember to make empty `js.txt` and `css.txt` files in your Wrapper lient Library folder. Without these empty files, the Client Library will be ignored.**
 
 
 ## Breaking API changes
