--- a/acs-aem-commons/pages/releases/4-0-0.md
+++ b/acs-aem-commons/pages/releases/4-0-0.md
@@ -12,6 +12,10 @@ title: ACS AEM Commons 4.0.0
 Please read this page to understand these breaking changes!
 </div>
 
+## AEM Version Support
+
+ACS AEM Commons 4.x.x supports AEM 6.3, 6.4 and 6.5. Not that ACS AEM Commons version 4.x.x. DROPS support for AEM 6.2.
+
 ## Changelog
 
 For a list of ALL the changes in 4.0.0 please review the [full changelog](https://github.com/Adobe-Consulting-Services/acs-aem-commons/releases).
